--- a/index.html
+++ b/index.html
@@ -34,11 +34,17 @@
                 </a>
                 <ul>
                     <li><a href="#">Dashboard</a></li>
-                    <li><a href="#" class="logout">Logout</a></li>
+                    <li><a href="new.html" class="logout">Logout</a></li>
                 </ul>
             </li>
         </ul>
     </header>
+
+    <div class="intro">
+        <!-- <video autoplay muted loop id="myVideo">
+            <source src="./video/Hero of the Match - Jerry Mawihmingthanga _ Mumbai City FC vs Odisha FC _ Hero ISL 2019-20-FYMNdFCb6tw.mp4" type="video/mp4">
+          </video> -->
+    </div>
 
     <!-- Page Wrapper -->
     <div class="page-wrapper">
@@ -248,7 +254,7 @@
                 <br>
                 <form action="index.html" method="post">
                     <input type="email" name="email" class="text-input contact-input" placeholder="Enter email..">
-                    <textarea name="message" class="text-input contact-input"></textarea>
+                    <textarea  rows = "4" name="message" class="text-input contact-input"></textarea>
                     <button type="submit" class="btn btn-big contact-btn">
                         <i class="fas fa-envelope"></i>
                         Send
