More Changes made

--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
             <li>
                 <a href="#">
                     <i class="fa fa-user"></i>
-                    Apratim Das
+                    Unknown User
                     <i class="fa fa-chevron-down" style="font-size: 0.8em;"></i>
                 </a>
                 <ul>
-                    <li><a href="#">Dashboard</a></li>
-                    <li><a href="new.html" class="logout">Logout</a></li>
+                    
+                    <li><a href="login.html" class="login">Login</a></li>
+                    <li><a href="register.html" class="register">Sign Up</a></li>
                 </ul>
             </li>
         </ul>
