--- a/new.html
+++ b/new.html
@@ -29,13 +29,12 @@
             <li>
                 <a href="#">
                     <i class="fa fa-user"></i>
-                    Unknown User
+                    Apratim Das
                     <i class="fa fa-chevron-down" style="font-size: 0.8em;"></i>
                 </a>
                 <ul>
-                    
-                    <li><a href="login.html" class="login">Login</a></li>
-                    <li><a href="register.html" class="register">Sign Up</a></li>
+                    <li><a href="#">Dashboard</a></li>
+                    <li><a href="index.html" class="logout">Logout</a></li>
                 </ul>
             </li>
         </ul>
